# sputnikvm

./: Cargo.toml
jsontests/src/: lib.rs
network/classic/: Cargo.toml
network/foundation/: Cargo.toml
precompiled/bn128/: Cargo.toml
precompiled/modexp/: Cargo.toml
src/: lib.rs
src/eval/: lifecycle.rs  mod.rs
